# retico-conversational-agent-unity

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst  installation.md  plot_and_visualization.md
src/retico-conversational-agent-unity/: LLM_DM.py  VAD_DM.py  dialogue_history.py  dialogue_manager.py  main.py
src/retico_conversational_agent_unity/: ASR_DM.py  LLM_DM.py  Speaker_DM.py  TTS_DM.py  VAD_DM.py  __init__.py  additional_IUs.py  dialogue_history.py  dialogue_manager.py  gesture_demo.py  gesture_generator.py  gesture_productor_demo.py  main.py  nonverbal_generator.py  nonverbal_generator_unity.py  test_llm_dm.py  test_wav.py  unity_communicator.py  unity_receptor.py
src/retico_conversational_agent_unity/configs/: plot_config_DM.json  prompt_format_config_test.json
tests/: test_reception.py  test_sending.py  utest_sending.py
