[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "retico-conversational-agent-unity"
authors = [{ name = "Marius Le Chapelier", email = "mariuslechapelier@gmail.com" }]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
version = "0.0.1"
requires-python = ">=3.11.7"
dependencies = [
    "retico-conversational-agent @ git+https://github.com/articulab/retico-conversational-agent.git",
]
